@@ -1,5 +1,12 @@
 2019-06-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/png.c (RegisterPNGImage): Pass correct size value to
+	strlcat().  Under Apple's OS X (and possibly other targets)
+	strlcat() writes bytes beyond what it needs to (but within the
+	range it is allowed to) causing a crash due to the wrong limit
+	value.  Fixes SourceForge issue #609 `gm identify foo.png` crashes
+	on macOS (v 1.3.32).
+
 	* www/Changes.rst: Update ChangeLog links due to new year, and
 	1.3.32 release.
 
